--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,9 @@
 # 忽略所有 .log 文件
 *.log
-*.py
-*.png
-*.pkl
 *.docx
 *.tmp
+*.pdf
 
-# 忽略 build 目录及其内容
-build/
-Torch_checkpoints/
-Set14/
-Urban100/
-params/
-imagenette2/
-DIV2K/
-checkpoints/
 .idea/
 __pycache__/
 # 忽略特定文件
